Howler library added

--- a/circles.html
+++ b/circles.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patatap Clone</title>
     <link rel="stylesheet" href="circles.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.0/howler.js"></script>
     <script type="text/javascript" src="lib/paper-full.min.js"></script>
     <script type="text/paperscript" canvas="myCanvas">
         var circles=[]; 
